<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/compliment_list_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/compliments"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/compliment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/compliment_list_app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_anchorGravity="bottom" />

    <LinearLayout
        android:id="@+id/empty_compliment_list_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorNavyBlue"
            android:text="@string/hey_there"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorNavyBlue"
            android:text="@string/create_new_compliments_dialog"
            android:textSize="16sp"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/compliment_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"/>

</android.support.design.widget.CoordinatorLayout>